--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h2 {
 }
 
 h3 {
- color: #f6bdd1;
+ color: #f8bed3;
  background-color: #8b575c;
  padding-top: 1em;
  padding-bottom: 1em;
@@ -46,7 +46,7 @@ h3 {
 
 h4 {
  color: #F6E4F6;
- background-color: #c98986;
+ background-color: #c3807c;
  padding-top: 1em;
  padding-bottom: 1em;
 }
