--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ li a:hover {
  font-size: 1.5 em;
 }
 
-.factButton {
+#factButton {
  color: darkred ;
  font-size: 1.3em;
  padding: 15px;
@@ -196,11 +196,11 @@ li a:hover {
  margin-bottom: 10px;
 }
 
-.factButton:hover {
+#factButton:hover {
  background-color: pink;
 }
 
-.fact {
+#fact {
  background: none;
  font-family: sans-serif;
  font-size: 1.5em;
